everything is borked\!

--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -21,7 +21,7 @@
 	<div class="tagline">GradeSheet</div>
 	<img src="/images/rails.png">
 
-	<div class="flash"><%= flash[:notice] %></div>
+  <%= show_flash %>
 
 	<%= menu_builder(controller.controller_name) %>
 	                    
