--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,28 +1,29 @@
+<%= debug @users %>
 <p>
   <b>Short name:</b>
-  <%=h @user.short_name %>
+  <%#=h @user.short_name %>
 </p>
 
 <p>
   <b>First name:</b>
-  <%=h @user.first_name %>
+  <%#=h @user.first_name %>
 </p>
 
 <p>
   <b>Last name:</b>
-  <%=h @user.last_name %>
+  <%#=h @user.last_name %>
 </p>
 
 <p>
   <b>Email:</b>
-  <%=h @user.email %>
+  <%#=h @user.email %>
 </p>
 
 <p>
   <b>Campus:</b>
-  <%=h @user.campus_id %>
+  <%#=h @user.campus_id %>
 </p>
 
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%#= link_to 'Edit', edit_user_path(@user) %> |
+<%#= link_to 'Back', users_path %>
