--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,19 @@
 <% content_for :left do %>
-<%= debug @types %>
+<%#= debug @types %>
 
 <table id="types" class="master">
   <thead>
     <th>Type</th>
   </thead>
 	<tbody>
-		<% for t in @types -%>
+		<% @types.each { |key, value| -%>
 			<tr><%#= link_to t ,user_path(t), :class => cycle('odd', 'even') %>
-				<td><%= link_to_function t , t %></td>
+				<td><%= link_to_remote value.name, 
+								{:update => 'users', :method => :get, :url => { :controller => key }}, 
+								:href => url_for(:controller => key) %> <%#= debug key %>
+				</td>
 			</tr>
-		<% end -%>
+		<% } -%>
   </tbody>
 </table>
 
