cleaned up users/students/teachers/teacher_assistants

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,29 +1,12 @@
 <% content_for :left do %>
-<%#= debug @types %>
-
-<table id="types" class="master">
-  <thead>
-    <th>Type</th>
-  </thead>
-	<tbody>
-		<% @types.each { |key, value| -%>
-			<tr><%#= link_to t ,user_path(t), :class => cycle('odd', 'even') %>
-				<td><%= link_to_remote value.name, 
-								{:update => 'users', :method => :get, :url => { :controller => key }}, 
-								:href => url_for(:controller => key) %> <%#= debug key %>
-				</td>
-			</tr>
-		<% } -%>
-  </tbody>
-</table>
-
+	<%= render :partial => 'users/user_types' %>
 <% end %>
 
-<div id="table">
+<div id="users">
 	<%= render :partial => "users/user_list", :locals => { :users => @students }  %>
 </div>
 
 <br />
-
-<%= link_to 'New Student', new_student_path %>
+<h1>BLAH</h1>
+<%#= link_to 'New Student', new_student_path %>
 
