--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,22 +1,5 @@
 <% content_for :left do %>
-<%#= debug @types %>
-
-<table id="types" class="master">
-  <thead>
-    <th>Type</th>
-  </thead>
-	<tbody>
-		<% @types.each { |key, value| -%>
-			<tr class="<%= cycle('odd', 'even') %>" onclick="<%= remote_function(:update => 'users', :method => :get, :url => { :controller => key }) %>"/>
-				<td><%= link_to_remote value.name, {:update => 'users', :method => :get, :url => { :controller => key }}, 
-								:href => url_for(:controller => key) %> <%#= debug link_path %>
-				</td>
-				<td><%#= value_path(value) %></td>
-			</tr>
-		<% } -%>
-  </tbody>
-</table>
-
+	<%= render :partial => 'users/user_types' %>
 <% end %>
 
 <div id="users">
