--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -11,7 +11,7 @@
   <%= stylesheet_link_tag 'tables' %>
   <%#= stylesheet_link_tag 'buttons' %>
   <%= stylesheet_link_tag 'menu' %>
-  <%= javascript_include_tag 'prototype' %>
+  <%= javascript_include_tag :defaults %>
 </head>
 <body>
 
