using AJAX to update users is not working.  Going back to old controllers...

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -2,6 +2,10 @@
 	<%= render :partial => 'users/user_types' %>
 <% end %>
 
+<div id="edit">
+	HERE IS WHERE WE EDIT STUDENTS
+</div>
+
 <div id="users">
 	<%= render :partial => "users/user_list", :locals => { :users => @students }  %>
 </div>
