--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,10 @@
 	<%= render :partial => 'users/user_types' %>
 <% end %>
 
+<div id="edit">
+	HERE IS WHERE WE EDIT USERS
+</div>
+
 <div id="users">
 	<%= render :partial => "users/user_list", :locals => { :users => @users }  %>
 </div>
