--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -23,8 +23,7 @@
 
   <%= show_flash %>
 
-	<%= menu_builder(controller.controller_name) %>
-	                    
+	<%= menu_builder(request.path_parameters['controller'].split('/')[0]) %>
 </div>
 
 
