Removed the prefix from the route namespaces
This makes it more natural to use the URL helpers of all the "children" classes.
For example, we can now use edit_student(student.id) instead of users_edit_student(student.id).

--- a/app/views/users/_user_list.html.erb
+++ b/app/views/users/_user_list.html.erb
@@ -1,4 +1,4 @@
-<% user_type = "student" %>
+<% user_type ||= "student" %>
 
 <table id="users" class="master">
   <thead>
@@ -22,7 +22,7 @@
 		<% for u in users %>
 			<tr class="<%= cycle('odd', 'even') %>" onclick="<%#= link_to(u.full_name, u) %>"/>
 				<%= content_tag :td, u.short_name %>
-				<%= content_tag :td, link_to_function(u.full_name, u) %>
+				<%= content_tag :td, link_to(u.full_name, u) %>
 				<%= content_tag :td, u.email %>
 				<%= content_tag :td, u.site.name %>
 				<% if user_type == "student" %>
