--- a/app/views/users/students/show.html.erb
+++ b/app/views/users/students/show.html.erb
@@ -1,9 +1,11 @@
-<%#= title "Student: #{@student.first_name} #{@student.last_name}" %>
+<%= title "Student: #{@student.first_name} #{@student.last_name}" %>
+
+<h1>YOU SHOULD NEVER GET HERE!</h1>
 
 <%#= render :partial => @student %>
 
-<%#= link_to 'Edit', edit_student_path(@student) %> |
-<%#= link_to 'Back', students_path %>
+<%= link_to 'Edit', edit_student_path(@student) %> |
+<%= link_to 'Back', students_path %>
 
 
 
