student editing now works properly - and it looks good too

--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -5,11 +5,10 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Gradesheet<%#= controller.action_name.capitalize + "ing" %></title>
-  <%#= stylesheet_link_tag 'forms' %>
   <%#= stylesheet_link_tag 'scaffold' %>
   <%= stylesheet_link_tag 'layout' %>
+  <%= stylesheet_link_tag 'forms' %>
   <%= stylesheet_link_tag 'tables' %>
-  <%#= stylesheet_link_tag 'buttons' %>
   <%= stylesheet_link_tag 'menu' %>
   <%= javascript_include_tag :defaults %>
 </head>
