--- a/app/views/users/students/show.html.erb
+++ b/app/views/users/students/show.html.erb
@@ -1,4 +1,4 @@
-<%= title "Student: #{@student.first_name} #{@student.last_name}" %>
+<%#= title "Student: #{@student.first_name} #{@student.last_name}" %>
 
 <h1>YOU SHOULD NEVER GET HERE!</h1>
 
