working on adding new users

--- a/app/views/users/_user_list.html.erb
+++ b/app/views/users/_user_list.html.erb
@@ -2,6 +2,7 @@
 
 <table id="users" class="master">
   <thead>
+		<th></th>
     <th>ID</th>
     <% form_for users.class.to_s, :html => { :method => :get } do |s| %>
 	    <th>Name <%= text_field_tag :search, params[:search], :class => "search" %></th>
@@ -11,6 +12,7 @@
 		<%= content_tag(:th, 'Class Of') if user_type == 'Student' %>
   </thead>
 	<tfoot>
+		<th></th>
     <th>ID</th>
     <th>Name</th>
     <th>Email Address</th>
@@ -21,8 +23,9 @@
 	<tbody>
 		<% for u in users %>
 			<tr class="<%= cycle('odd', 'even') %>" onclick="location.href='<%= url_for(u)+'/edit' %>'" />
+				<td><%= button_to "X", u, :method => :delete, :confirm => "Are you sure you want to delete\n\n '" + u.full_name + "'?" %></td>
 				<%= content_tag :td, u.short_name %>
-				<td><%= link_to u.full_name, { :controller => 'users/'+u.class.name.tableize, :action => "edit", :id => u.id } %></td>
+				<td><%= link_to u.full_name, u, :method => :edit %></td>
 				<%= content_tag :td, u.email %>
 				<%= content_tag :td, u.site.name %>
 				<%= content_tag(:td, u.class_of) if user_type == 'Student' %>
