--- a/app/views/users/_user_types.html.erb
+++ b/app/views/users/_user_types.html.erb
@@ -1,17 +1,23 @@
+<% 
+	# NOTE: I'm 'not sure why using 'object.new' works, but it does :/  
+%>
 
 <table id="types" class="master">
   <thead>
     <th>Type</th>
+    <th></th>
   </thead>
 	<tbody>
-		<% @types.sort.each { |key, value| -%>
+		<% @types.sort.each { |key, value| %>
 			<% object = value.to_s.camelize.singularize.constantize  %>
-			<tr class="<%= cycle('odd', 'even') %>" onclick="location.href='<%= url_for object.new %>'" />
-				<td>
-					<%= link_to key, object.new %>
-				</td>
+			<% object_path = url_for object.new %>
+			<tr class="<%= cycle('odd', 'even') %>" nclick="location.href='<%= url_for object_path %>'" />
+				<% block_tag :td, :onlick => url_for(object_path) do -%>
+					<%= link_to key, object_path %>
+				<% end -%>
+				<td><%= button_to( '+', object_path + '/new', :method => :get ) if key != 'ALL'  %></td>
 			</tr>
-		<% } -%>
+		<% } %>
   </tbody>
 </table>
 
