--- a/app/views/users/_user_types.html.erb
+++ b/app/views/users/_user_types.html.erb
@@ -11,10 +11,8 @@
 		<% @types.sort.each { |key, value| %>
 			<% object = value.to_s.camelize.singularize.constantize  %>
 			<% object_path = url_for object.new %>
-			<tr class="<%= cycle('odd', 'even') %>" nclick="location.href='<%= url_for object_path %>'" />
-				<% block_tag :td, :onlick => url_for(object_path) do -%>
-					<%= link_to key, object_path %>
-				<% end -%>
+			<tr class="<%= cycle('odd', 'even') %>" />
+				<%= content_tag :td, link_to(key, object_path) , :onclick => "location.href='" + url_for(object_path) + "'" %>
 				<td><%= button_to( '+', object_path + '/new', :method => :get ) if key != 'ALL'  %></td>
 			</tr>
 		<% } %>
