--- a/app/views/users/students/new.html.erb
+++ b/app/views/users/students/new.html.erb
@@ -1,44 +1,5 @@
-<h1>New Student</h1>
+<%= error_messages_for :student, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
 
-<%= error_messages_for :student %>
-
-<% form_for(@student) do |f| %>
-	render_partial 'student', @students
-	
-	<p>
-    <b>Short Name</b><br />
-    <%= f.text_field :short_name %>
-  </p>
+<%= render :partial => "users/new", :locals => { :user => @student } %>
 
 
-  <p>
-    <b>First Name</b><br />
-    <%= f.text_field :first_name %>
-  </p>
-
-	<p>
-    <b>Last Name</b><br />
-    <%= f.text_field :last_name %>
-  </p>
-
-	<p>
-    <b>Email Address</b><br />
-    <%= f.text_field :email %>
-  </p>
-
-  <p>
-    <b>Class of</b><br />
-    <%= f.text_field :class_of %>
-  </p>
-
-	<p>
-    <b>Site</b><br />
-		<%= collection_select :student, :site, Site.find(:all), :id, :name %>
-  </p>
-	
-	
-	<%= submit_tag 'Create' %>
-
-<% end %>
-
-<%= link_to 'Back', students_path %>
