--- a/app/views/users/teacher_assistants/new.html.erb
+++ b/app/views/users/teacher_assistants/new.html.erb
@@ -1,11 +1,3 @@
-<h1>New teacher_assistant</h1>
+<%= error_messages_for :teacher_assistant, :header_message => "Please Try Again!", :message => "We had some problems creating the new user:" %>
 
-<% form_for(@teacher_assistant) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.submit "Create" %>
-  </p>
-<% end %>
-
-<%= link_to 'Back', teacher_assistants_path %>
+<%= render :partial => "users/new", :locals => { :user => @teacher_assistant } %>
