--- a/app/views/users/students/new.html.erb
+++ b/app/views/users/students/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for :left do %>
+	<%= render :partial => 'users/user_types' %>
+<% end %>
+
 <%= error_messages_for :student, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
 
 <%= render :partial => "users/new", :locals => { :user => @student } %>
