--- a/app/views/users/teacher_assistants/new.html.erb
+++ b/app/views/users/teacher_assistants/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for :left do %>
+	<%= render :partial => 'users/user_types' %>
+<% end %>
+
 <%= error_messages_for :teacher_assistant, :header_message => "Please Try Again!", :message => "We had some problems creating the new user:" %>
 
 <%= render :partial => "users/new", :locals => { :user => @teacher_assistant } %>
