--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -40,9 +40,6 @@ body {
 * html #left {
   left: 150px;           /* RC fullwidth */
 }
-
-
-
 #header {
 	background-color: #003366;
 	color: white;
@@ -91,6 +88,12 @@ body {
 
 .paginate {
 	text-align: center;
+}
+
+h2 {
+	color:#666; 
+	margin: 7px 0px 5px;
+	font-size:16px;
 }
 
 /*** Scaffold ***/
