basic course edit layout done

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -3,11 +3,9 @@
 <% end %>
 
 
-<div id='edit_course'>
-</div>
-
 <div id='course_details' class='course_list'>
-	<%= render :partial => 'courses/course_edit' %>
+	CENTER
+	<%#= render :partial => 'edit' %>
 </div>
 
 
