--- a/app/views/users/_user_types.html.erb
+++ b/app/views/users/_user_types.html.erb
@@ -6,6 +6,8 @@
 		# calling it from every method on every user controller in the land. %>
 <% types = User.find_user_types(:all) %>
 
+<%= debug @courses %>
+
 <table id="types" class="master">
   <thead>
     <th>Type</th>
