--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,32 +1,69 @@
+<% content_for :left do %>
+	<%= render :partial => 'course_list' %>
+<% end %>
+
 <%= error_messages_for :course, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
 
-<div class="entryform">
-<% form_for(@course) do |f| %>
-			<%= content_tag( :h1, "#{@course.name}" ) %>
-			<p>Change the information and hit SAVE</p>
-
-    <label>Name</label>
-    <%= f.text_field :name %>
-
-    <label>Type</label>
-		<%= collection_select :course, :course_type_id, CourseType.find(:all), :id, :name %>
-
-    <label>Teacher</label>
-		<%= collection_select :course, :teacher_id, Teacher.find(:all), :id, :full_name %>
-
-    <label>Term</label>
-		<%= collection_select :course, :term_id, Term.find(:all), :id, :name %>
-
-    <label>Grading Scale</label>
-		<%= collection_select :course, :grading_scale_id, GradingScale.find(:all), :id, :name %>
-
-    <label>Attributes</label>
-    <%= f.text_field :course_att_id %>
-
-   <%= f.submit "Save" %>
-
-<% end %>
+<div style='float: right;'>
+<table class='master'>
+	<thead>
+		<th>Class Of</th>
+	</thead>
+	<tbody>
+		<% for year in class_range[:from_year]..class_range[:to_year] %>
+			<tr class="<%= cycle('odd', 'even') %>" onclick="location.href='<%#= url_for( :action => :edit, :id => course.id ) %>'"/>
+				<%= content_tag :td, year %>
+			</tr>
+		<% end %>
+	</tbody>
+</table>
 </div>
 
-<%= link_to 'Back', courses_path %>
+<div style='float: left; width: 90%;'>
 
+<% form_for(@course) do |f| %>
+	<%= content_tag( :h1, "#{@course.name}" ) %>
+
+	<label>Name</label>
+	<%= f.text_field :name %>
+
+	<label>Type</label>
+	<%= collection_select :course, :course_type_id, CourseType.find(:all), :id, :name %>
+
+	<label>Teacher</label>
+	<%= collection_select :course, :teacher_id, Teacher.find(:all), :id, :full_name %>
+
+	<label>Term</label>
+	<%= collection_select :course, :term_id, Term.find(:all), :id, :name %>
+
+	<label>Grading Scale</label>
+	<%= collection_select :course, :grading_scale_id, GradingScale.find(:all), :id, :name %>
+
+	<label>Attributes</label>
+	<%= f.text_field :course_att_id %>
+
+	<%= f.submit "Save" %>
+
+<% end %>
+
+
+<% student = Student.first() %>
+<% form_for(student) do |s| %>
+	
+	<%= s.select(:class_of, (class_range[:from_year]..(class_range[:to_year])).to_a) %>
+<% end %>
+
+
+<table class='master'>
+	<thead>
+		<th>Name</th>
+	</thead>
+	<tbody>
+		<% for student in @course.students %>
+		<tr>
+			<%= content_tag :td, student.full_name %>
+		</tr>
+		<% end %>
+	</tbody>
+</table>
+</div>
